--- a/Practice/09_04/style.css
+++ b/Practice/09_04/style.css
@@ -4,6 +4,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+	background-color: white;
 }
 
 .grid {
@@ -21,4 +22,16 @@ body {
   width: 6rem;
   height: 6rem;
   background-color: hsl(0, 0%, 90%);
+}
+
+.hover {
+	border: 2px solid rgba(81, 203, 238, 1);
+}
+
+.cell.hover {
+	border: 1px solid rgba(177, 156, 217, 1);
+}
+
+.clicked {
+	background-color: skyblue;
 }
